[tool.poetry]
name = "repl_python3_Grace-Erikznider"
version = "0.1.0"
description = ""
authors = ["Erikznider <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Adafruit-SSD1306 = "^1.6.2"
Adafruit-Blinka = "^7.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
